--- a/index.html
+++ b/index.html
@@ -9,7 +9,66 @@
     <title>Document</title>
 </head>
 <body>
- 
-<script scr="js/app.js"></script>
+
+    <div class="wrapper">
+
+        <header>
+            <h2>Where in the world?</h2>
+            <div class="dark-light">
+                <p><span><i class="far fa-moon"></i></span>Dark mode</p>
+            </div>
+        </header>
+
+        <main>
+            <section class="user-input">
+                <input type="text" id="search"  name="search" placeholder="Search for a country">
+                <select name="user_filter" id="filter">
+                    <option value="" hidden>Filter by region</option>
+                    <option value="AF">Africa</option>
+                    <option value="AM">America</option>
+                    <option value="AS">Asia</option>
+                    <option value="EU">Europe</option>
+                    <option value="OC">Oceania</option>
+                </select>
+            </section>
+
+            <section class="content">
+                <!--HTML INJECTED BY APP.JS -->
+            </section>
+
+            <section class="extra">
+                <div>
+                    <button>Back</button>
+                </div>
+            <div class="details">
+                <img src="" alt="">
+                <div>
+                    <h1>title</h1>
+                    <ul>
+                        <li>Native name:</li>
+                        <li>Population:</li>
+                        <li>Region</li>
+                        <li>Sub Region:</li>
+                        <li>Capital:</li>
+                    </ul>
+                </div>
+                <div class="more-details">
+                    <ul>
+                        <li>Top level domain:</li>
+                        <li>Currencies:</li>
+                        <li>Languages:</li>
+                    </ul>
+                </div>
+                <div class="border">
+                    <h3>Border countries:</h3>
+                    <ul>
+                    </ul>
+                </div>
+            </div>
+            </section>
+        </main>
+</div><!--end of wrapper-->
+<script src="https://kit.fontawesome.com/60ec90e1e1.js" crossorigin="anonymous"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
