added region filter

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <section class="user-input">
                 <input type="text" id="search"  name="search" placeholder="Search for a country">
                 <select name="user_filter" id="filter">
-                    <option value="" hidden>Filter by region</option>
+                    <option value="ALL">Filter by region</option>
                     <option value="AF">Africa</option>
-                    <option value="AM">America</option>
+                    <option value="AM">Americas</option>
                     <option value="AS">Asia</option>
                     <option value="EU">Europe</option>
                     <option value="OC">Oceania</option>
