added details page

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <button>Back</button>
                 </div>
             <div class="details">
-                <img src="" alt="">
+                <!-- <img src="" alt="">
                 <div>
                     <h1>title</h1>
                     <ul>
@@ -50,14 +50,14 @@
                         <li>Region</li>
                         <li>Sub Region:</li>
                         <li>Capital:</li>
-                    </ul>
+                    </ul> -->
                 </div>
                 <div class="more-details">
-                    <ul>
+                    <!-- <ul>
                         <li>Top level domain:</li>
                         <li>Currencies:</li>
                         <li>Languages:</li>
-                    </ul>
+                    </ul> -->
                 </div>
                 <div class="border">
                     <h3>Border countries:</h3>
