added border functionality

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                     </ul> -->
                 </div>
                 <div class="border">
-                    <h3>Border countries:</h3>
+                    <!-- <h3>Border countries:</h3>
                     <ul>
-                    </ul>
+                    </ul> -->
                 </div>
             </div>
             </section>
