fixed cleaning extra section after going back to main section

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 
             <section class="extra">
                 <div>
-                    <button>Back</button>
+                    <button><i class="fas fa-arrow-left"></i>Back</button>
                 </div>
-            <div class="details">
+                <div class="details">
                 <!-- <img src="" alt="">
-                <div>
+                
                     <h1>title</h1>
                     <ul>
                         <li>Native name:</li>
@@ -64,7 +64,6 @@
                     <ul>
                     </ul> -->
                 </div>
-            </div>
             </section>
         </main>
 </div><!--end of wrapper-->
