added more targets to click on

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <h2>Where in the world?</h2>
             <div class="dark-light">
-                <p><span><i class="far fa-moon"></i></span>Dark mode</p>
+                <span><i class="far fa-moon"></i></span><p>Dark mode</p>
             </div>
         </header>
 
