--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
 
         <header>
-            <h2>Where in the world?</h2>
+            <h2><a href="index.html">Where in the world?</a></h2>
             <div class="dark-light">
                 <span><i class="far fa-moon"></i></span><p>Dark mode</p>
             </div>
