--- a/index.html
+++ b/index.html
@@ -41,29 +41,15 @@
                     <button><i class="fas fa-arrow-left"></i>Back</button>
                 </div>
                 <div class="details">
-                <!-- <img src="" alt="">
-                
-                    <h1>title</h1>
-                    <ul>
-                        <li>Native name:</li>
-                        <li>Population:</li>
-                        <li>Region</li>
-                        <li>Sub Region:</li>
-                        <li>Capital:</li>
-                    </ul> -->
+                    <!-- <div class="more-details">
+                    </div>
+                    <div class="border">
+                    </div> -->
                 </div>
-                <div class="more-details">
-                    <!-- <ul>
-                        <li>Top level domain:</li>
-                        <li>Currencies:</li>
-                        <li>Languages:</li>
-                    </ul> -->
-                </div>
+                <!-- <div class="more-details">
+                </div> -->
                 <div class="border">
-                    <!-- <h3>Border countries:</h3>
-                    <ul>
-                    </ul> -->
-                </div>
+                </div> 
             </section>
         </main>
 </div><!--end of wrapper-->
